--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,15 +15,12 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.2.0
-
-      - name: Install yarn
-        run: npm install yarn -g
       
       - name: Install dependencies
-        run: yarn install
+        run: npm install
       
       - name: Build
-        run: yarn run build
+        run: npm run build
       
       - name: Shush jekyll
         run: touch build/.nojekyll
